--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,15 @@
 Package: GrassmannOptim
 Type: Package
 Title: Grassmann Manifold Optimization
-Version: 1.2
-Date: 2012-07-08
+Version: 2.0
+Date: 2013-12-01
 Author: Kofi Placid Adragni and Seongho Wu
 Maintainer: Kofi Placid Adragni <kofi@umbc.edu>
 Depends: Matrix
-Description: Optimizing a function F(U), where U is a semi-orthogonal
-        matrix and F is invariant under an orthogonal transformation of
-        U
+Description: Optimizing a function F(U), where U is a semi-orthogonal matrix and F is invariant under an orthogonal transformation of U
 URL: http://www.math.umbc.edu/~kofi/GrassmannOptim
 License: GPL (>= 2)
-Packaged: 2012-07-09 01:20:28 UTC; kofi
+Packaged: 2013-12-01 21:45:11 UTC; kofi
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2012-07-09 05:48:42
+Date/Publication: 2013-12-02 08:01:34
